pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/output-wrapper.ub
factory: {
  outputs: {
    result: {
      value: 'one'
      value: 'two'
    }
  }
}
